--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^21.1.0",
     "@angular/build": "^21.1.0-rc.0",
     "@angular/cli": "^21.1.0-rc.0",
     "@angular/compiler-cli": "^21.1.0-next.0",
