--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
           "options": {
             "browser": "src/main.ts",
             "index": "src/index.html",
-            "polyfills": ["src/polyfills.ts"],
+            "polyfills": [],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
